--- a/templates/Consultancy.html
+++ b/templates/Consultancy.html
@@ -90,8 +90,8 @@
         <section class="section section-halfscreen bg-image"
             style="background-image: url({{url_for('static',filename='images/header-bg.jpg')}});">
             <div class="section-halfscreen-inner">
-                <div class="section-halfscreen-image wow fadeIn"
-                    style="background-image: url({{url_for('static',filename='images/screens-1-960x752.jpg')}});"></div>
+                <!-- <div class="section-halfscreen-image wow fadeIn"
+                    style="background-image: url({{url_for('static',filename='images/screens-1-960x752.jpg')}});"></div> -->
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 col-lg-5">
@@ -103,9 +103,12 @@
                                             class="font-weight-light">Planning</span></h2>
                                 </div>
                                 <div class="wow-outer p">
-                                    <p class="custom-article wow fadeInDown" data-wow-delay=".2s">Our company provides a
-                                        variety of consulting and planning services that help small and medium busineses
-                                        worldwide.</p>
+                                    <p class="custom-article wow fadeInDown" data-wow-delay=".2s"><strong
+                                            style="color: black;">Our company
+                                            provides a
+                                            variety of consulting and planning services that help small and medium
+                                            busineses
+                                            worldwide.</strong></p>
                                 </div><a class="button button-primary button-winona wow fadeIn" href="#">Read More</a>
                             </div>
                         </div>
@@ -159,54 +162,11 @@
             <div class="container">
                 <h3 class="wow-outer"><span class="wow slideInUp">Our Achievements</span></h3>
                 <p class="wow-outer"><span class="text-width-1 wow slideInDown">Since our establishment in 2002, our
-                        team has achieved a lot. Below are some statistics and interesting facts about our business
-                        consulting company.</span></p>
-                <div class="row row-50">
-                    <div class="col-6 col-md-3 wow-outer">
-                        <!-- Counter Minimal-->
-                        <article class="counter-minimal wow slideInDown">
-                            <div class="counter-minimal-icon linearicons-star"></div>
-                            <div class="counter-minimal-main">
-                                <div class="counter">12</div>
-                            </div>
-                            <h5 class="counter-minimal-title">International Awards</h5>
-                        </article>
-                    </div>
-                    <div class="col-6 col-md-3 wow-outer">
-                        <!-- Counter Minimal-->
-                        <article class="counter-minimal wow slideInDown">
-                            <div class="counter-minimal-icon linearicons-folder"></div>
-                            <div class="counter-minimal-main">
-                                <div class="counter">99</div><span class="value">%</span>
-                            </div>
-                            <h5 class="counter-minimal-title">Satisfied Clients</h5>
-                        </article>
-                    </div>
-                    <div class="col-6 col-md-3 wow-outer">
-                        <!-- Counter Minimal-->
-                        <article class="counter-minimal wow slideInDown">
-                            <div class="counter-minimal-icon linearicons-flag"></div>
-                            <div class="counter-minimal-main">
-                                <div class="counter">15</div>
-                            </div>
-                            <h5 class="counter-minimal-title">Years of Experience</h5>
-                        </article>
-                    </div>
-                    <div class="col-6 col-md-3 wow-outer">
-                        <!-- Counter Minimal-->
-                        <article class="counter-minimal wow slideInDown">
-                            <div class="counter-minimal-icon linearicons-lamp"></div>
-                            <div class="counter-minimal-main">
-                                <div class="counter">54</div>
-                            </div>
-                            <h5 class="counter-minimal-title">Qualified Employees</h5>
-                        </article>
-                    </div>
-                </div>
+                        team has achieved a lot and had very Happy customers.</span></p>
             </div>
         </section>
         <!-- CTA Thin-->
-        <section class="section section-xs bg-primary-darken text-center">
+        <!-- <section class="section section-xs bg-primary-darken text-center">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-sm-10 col-md-12">
@@ -220,7 +180,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Services-->
         <section class="section section-lg bg-gray-100 text-center">
             <div class="container">
@@ -257,52 +217,7 @@
             </div>
         </section>
         <!-- Recent News-->
-        <section class="section section-lg text-center">
-            <div class="container">
-                <h3 class="wow-outer"><span class="wow slideInDown">Recent News</span></h3>
-                <div class="row row-30">
-                    <div class="col-sm-6 col-md-4 col-lg-3 wow-outer">
-                        <!-- Post Tiny-->
-                        <article class="post-tiny wow fadeSlideInDown"><a class="post-tiny-media" href="#"><img
-                                    src="{{url_for('static',filename='images/blog-layouts-1-270x184.jpg')}}" alt=""
-                                    width="270" height="184" /></a>
-                            <h5 class="post-tiny-title"><a href="#">Market Research Tips for Business Owners</a></h5>
-                            <time class="post-tiny-time" datetime="2017">2 days ago</time>
-                        </article>
-                    </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3 wow-outer">
-                        <!-- Post Tiny-->
-                        <article class="post-tiny wow fadeSlideInDown" data-wow-delay=".05s"><a class="post-tiny-media"
-                                href="#"><img src="{{url_for('static',filename='images/blog-layouts-2-270x184.jpg')}}"
-                                    alt="" width="270" height="184" /></a>
-                            <h5 class="post-tiny-title"><a href="#">Managing Your Company Finances</a></h5>
-                            <time class="post-tiny-time" datetime="2017">2 days ago</time>
-                        </article>
-                    </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3 wow-outer">
-                        <!-- Post Tiny-->
-                        <article class="post-tiny wow fadeSlideInDown" data-wow-delay=".1s"><a class="post-tiny-media"
-                                href="#"><img src="{{url_for('static',filename='images/blog-layouts-3-270x184.jpg')}}"
-                                    alt="" width="270" height="184" /></a>
-                            <h5 class="post-tiny-title"><a href="#">Efficient Accounting for Your Business</a></h5>
-                            <time class="post-tiny-time" datetime="2017">2 days ago</time>
-                        </article>
-                    </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3 wow-outer">
-                        <!-- Post Tiny-->
-                        <article class="post-tiny wow fadeSlideInDown" data-wow-delay=".15s"><a class="post-tiny-media"
-                                href="#"><img src="{{url_for('static',filename='images/blog-layouts-4-270x184.jpg')}}"
-                                    alt="" width="270" height="184" /></a>
-                            <h5 class="post-tiny-title"><a href="#">Applying Innovations in Management</a></h5>
-                            <time class="post-tiny-time" datetime="2017">2 days ago</time>
-                        </article>
-                    </div>
-                </div>
-                <div class="wow-outer button-outer offset-top-2"><a
-                        class="button button-dark-outline button-winona wow slideInUp" href="#">View all Blog posts</a>
-                </div>
-            </div>
-        </section>
+
         <!-- A Few Words About Us-->
         <section class="section bg-gray-100">
             <div class="range justify-content-xl-between">
@@ -378,42 +293,7 @@
             </div>
         </section>
         <!-- Partners-->
-        <section class="section section-sm text-center">
-            <div class="container">
-                <!-- Owl Carousel-->
-                <div class="owl-carousel owl-carousel-1" data-items="2" data-sm-items="3" data-md-items="4"
-                    data-lg-items="5" data-dots="true" data-nav="false" data-stage-padding="0" data-loop="true"
-                    data-margin="30" data-mouse-drag="false">
-                    <div class="item wow-outer">
-                        <div class="wow slideInLeft"><a class="link-image" href="#"><img
-                                    src="{{url_for('static',filename='images/logo-john-brad-135x87.png')}}" alt=""
-                                    width="135" height="87" /></a></div>
-                    </div>
-                    <div class="item wow-outer">
-                        <div class="wow slideInLeft" data-wow-delay=".05s"><a class="link-image" href="#"><img
-                                    src="{{url_for('static',filename='images/logo-the-oldbrand-134x104.png')}}" alt=""
-                                    width="134" height="104" /></a>
-                        </div>
-                    </div>
-                    <div class="item wow-outer">
-                        <div class="wow slideInLeft" data-wow-delay=".1s"><a class="link-image" href="#"><img
-                                    src="{{url_for('static',filename='images/logo-havana-cabana-132x87.png')}}" alt=""
-                                    width="132" height="87" /></a>
-                        </div>
-                    </div>
-                    <div class="item wow-outer">
-                        <div class="wow slideInLeft" data-wow-delay=".15s"><a class="link-image" href="#"><img
-                                    src="{{url_for('static',filename='images/logo-brownie-143x85.png')}}" alt=""
-                                    width="143" height="85" /></a></div>
-                    </div>
-                    <div class="item wow-outer">
-                        <div class="wow slideInLeft" data-wow-delay=".2s"><a class="link-image" href="#"><img
-                                    src="{{url_for('static',filename='images/logo-hillplan-111x85.png')}}" alt=""
-                                    width="111" height="85" /></a></div>
-                    </div>
-                </div>
-            </div>
-        </section>
+
         <footer class="section footer-minimal bg-primary-darken">
             <div class="container">
                 <div class="footer-minimal-inner"><a class="brand" href="index.html"><img
