--- a/templates/login.html
+++ b/templates/login.html
@@ -13,20 +13,20 @@
     <!-- Footer CSS -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/footer.css') }}">
 
-    <title>Hello, world!</title>
+    <title>Login | PR Group</title>
 </head>
 
 <body>
     <!-- Nav -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Login - PR Group</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -52,7 +52,7 @@
                         <a class="nav-link disabled">Disabled</a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </nav>
     <!-- Body -->
